--- a/purrfect-match.html
+++ b/purrfect-match.html
@@ -3,7 +3,7 @@
 <head>
 	<title>purrfect match</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="purrfect-match.css">
+	<link rel="stylesheet" type="text/css" href="css/purrfect-match.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
